[gd_scene load_steps=2 format=3 uid="uid://btr82wsppjoty"]

[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_c01i7"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_c01i7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.368627)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -12.0
offset_right = 65.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ExitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Exit"

[node name="RestartButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Reset"

[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
